it will add a user interface and the sum will appear on the form

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
        </div>
        <button type="submit" class="btn">Add!</button>
      </form>
+     <div id="output">
+
    </div>
  </body>
  </html>
