--- a/index.html
+++ b/index.html
@@ -12,32 +12,48 @@
   <body>
    <div class="container">
      <h1>Calculator</h1>
+      <form id="calculator">
+       <div class="form-group">
+         <label for="input1">1st number:</label>
+         <input id="input1" class="form-control" type="text">
+       </div>
+       <div class="form-group">
+         <label for="input2">2nd number:</label>
+         <input id="input2" class="form-control" type="text">
+       </div>
+       <div class="radio">
+        <label>
+          <input type="radio" name="operator" value="add" checked>
+          add
+        </label>
+       </div>
+       <div class="radio">
+          <label>
+            <input type="radio" name="operator" value="subtract">
+            subtract
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="operator" value="multiply">
+            multiply
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="operator" value="divide">
+            divide
+          </label>
+        </div>
 
-     <form id="add">
-       <div class="form-group">
-         <label for="add1">1st number:</label>
-         <input id="add1" class="form-control" type="text">
-       </div>
-       <div class="form-group">
-         <label for="add2">2nd number:</label>
-         <input id="add2" class="form-control" type="text">
-       </div>
-       <button type="submit" class="btn">Add!</button>
+
+
+       <button type="submit" class="btn">Total!</button>
+
+
+
      </form>
-
-     <form id="subtract">
-       <div class="form-group">
-         <label for="subtract1">1st number:</label>
-         <input id="subtract1" class="form-control" type="text">
-       </div>
-       <div class="form-group">
-         <label for="subtract2">2nd number:</label>
-         <input id="subtract2" class="form-control" type="text">
-       </div>
-       <button type="submit" class="btn">Subtract!</button>
-        </form>
-
-        <div id="output">
+     <div id="output">
    </div>
  </body>
- </html>
+</html>
